fix them toggle button being too high on small screens

--- a/app/assets/styles/media.css
+++ b/app/assets/styles/media.css
@@ -194,7 +194,7 @@
     }
 
     .hero__bottom {
-      bottom: 50px;
+      bottom: 20px;
       right: 5px;
     }
 
